Fix logging decorator, add it to all meaningful transformers

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,121 +16,120 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import PolynomialFeatures"
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from collections import Counter\n",
+    "\n",
+    "from itertools import permutations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/educauchy/opt/anaconda3/lib/python3.7/site-packages/pandas/core/series.py:856: RuntimeWarning: divide by zero encountered in log10\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
-      "/Users/educauchy/opt/anaconda3/lib/python3.7/site-packages/pandas/core/series.py:856: RuntimeWarning: invalid value encountered in log10\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id                0.0\n",
-      "feature_0         0.0\n",
-      "feature_1         0.0\n",
-      "feature_2         0.0\n",
-      "feature_3         0.0\n",
-      "                 ... \n",
-      "feature_45_log    0.0\n",
-      "feature_46_log    0.0\n",
-      "feature_47_log    0.0\n",
-      "feature_48_log    0.0\n",
-      "feature_49_log    0.0\n",
-      "Length: 102, dtype: float64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(100000, 52)"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv('../data/external/train.csv')\n",
-    "data.head()\n",
-    "\n",
     "\n",
     "data['target_enc'] = (data['target'].str.split('_', expand=True)[1]).astype(int)\n",
     "data.drop(['target'], axis=1, inplace=True)\n",
+    "data.shape\n",
     "\n",
-    "for col in data.columns:\n",
-    "    if col not in ['id', 'target', 'target_enc']:\n",
-    "        data[col + '_log'] = np.nan_to_num(np.log10(data[col] + 1).astype('float32'))\n",
-    "data.replace([-np.inf, np.inf], 0, inplace=True)\n",
+    "# for col in data.columns:\n",
+    "#     if col not in ['id', 'target', 'target_enc']:\n",
+    "#         data[col + '_log'] = np.nan_to_num(np.log10(data[col] + 1).astype('float32'))\n",
+    "# data.replace([-np.inf, np.inf], 0, inplace=True)\n",
     "\n",
-    "creator = PolynomialFeatures(degree=2, interaction_only=False, include_bias=False).fit(data)\n",
-    "new_values = np.nan_to_num((creator.transform(data).astype(np.float32)))\n",
-    "d = pd.DataFrame(data=new_values, columns=creator.get_feature_names())\n",
-    "data = data.join(d)"
+    "# creator = PolynomialFeatures(degree=2, interaction_only=False, include_bias=False).fit(data)\n",
+    "# new_values = np.nan_to_num((creator.transform(data).astype(np.float32)))\n",
+    "# d = pd.DataFrame(data=new_values, columns=creator.get_feature_names())\n",
+    "# data = data.join(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(100000, 5457)"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100000, 2704)\n"
+     ]
     }
    ],
    "source": [
-    "data.shape"
+    "train_cols_perm_2 = permutations(data.columns, 2)\n",
+    "train_cols_perm_3 = permutations(data.columns, 3)\n",
+    "\n",
+    "for feature1, feature2 in train_cols_perm_2:\n",
+    "    data[feature1 + '+' + feature2] = data[feature1] + data[feature2]\n",
+    "\n",
+    "print(data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "target_enc    1.000000\n",
-       "x51           1.000000\n",
-       "x0 x51        0.485284\n",
-       "x8 x51        0.130004\n",
-       "x10 x51       0.139267\n",
-       "x12 x51       0.116436\n",
-       "x13 x51       0.120935\n",
-       "x15 x51       0.146007\n",
-       "x16 x51       0.161480\n",
-       "x18 x51       0.115545\n",
-       "x19 x51       0.121902\n",
-       "x25 x51       0.109800\n",
-       "x29 x51       0.162846\n",
-       "x32 x51       0.109715\n",
-       "x35 x51       0.154473\n",
-       "x37 x51       0.100341\n",
-       "x39 x51       0.172946\n",
-       "x41 x51       0.120271\n",
-       "x49 x51       0.109973\n",
-       "x51^2         0.983407\n",
-       "Name: target_enc, dtype: float64"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = ((data_corr.stack()[data_corr.stack() > 0.1]).unstack())['target_enc']\n",
+    "data_corr = data.corr()\n",
+    "s = ((data_corr.stack()[data_corr.stack() > 0.01]).unstack())['target_enc']\n",
     "s[~s.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(21, 2),\n",
+       " (20, 4),\n",
+       " (19, 12),\n",
+       " (18, 16),\n",
+       " (17, 16),\n",
+       " (16, 20),\n",
+       " (15, 33),\n",
+       " (14, 70),\n",
+       " (13, 84),\n",
+       " (12, 112),\n",
+       " (11, 153),\n",
+       " (10, 195),\n",
+       " (9, 294),\n",
+       " (8, 358),\n",
+       " (7, 433),\n",
+       " (6, 833),\n",
+       " (5, 1380),\n",
+       " (4, 2395),\n",
+       " (3, 3604),\n",
+       " (2, 5589),\n",
+       " (1, 10444),\n",
+       " (0, 73953)]"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f40 = dict(Counter(data['feature_40']))\n",
+    "sorted(f40.items(), key=lambda x: x[1]"
    ]
   },
   {
